# or-airbrake-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build.sh  build.xml  pom.xml  settings.gradle
.github/workflows/: gradle.yml
rockets/: Borealis 2024 Flight RSE 13.65kg N2O 3.53kg Fuel.rse  Borealis 2024 Flight RSE 13.65kg N2O 3.625kg Fuel.rse  Borealis 2024 Flight RSE 14kg N2O 3.75kg Fuel.rse  Cycle 4 REVIEWED.ork  Cycle 5.1 DEV.ork  Cycle_4_REVIEWED.ork  Eridium_Flight_RSE.rse  Final Simulation Result.csv  c31a.ork
src/main/cpp/: CMakeLists.txt  processor_calculations.cpp
src/main/include/: com_waterloorocketry_airbrakeplugin_jni_ProcessorCalculations.h  com_waterloorocketry_airbrakeplugin_jni_ProcessorCalculations_ControllerState.h  jni_Tools.h
src/main/java/airbrakeplugin/AirbrakePlugin/: AirbrakePlugin.java  AirbrakePluginProvider.java  AirbrakePluginSimulationListener.java
src/main/java/airbrakeplugin/AirbrakePlugin/Airbrakes/: Airbrakes.java
src/main/java/airbrakeplugin/AirbrakePlugin/Controllers/: Controller.java
src/main/java/com/waterloorocketry/airbrakeplugin/: AirbrakePlugin.java  AirbrakePluginConfigurator.java  AirbrakePluginProvider.java  AirbrakePluginSimulationListener.java  PidTuner.java
src/main/java/jni/: LibraryLoader.java  Tools.java
src/net/sf/openrocket/AirbrakePlugin/: AirbrakePlugin.java  AirbrakePluginProvider.java  AirbrakePluginSimulationListener.java
src/net/sf/openrocket/BrakeOR/: AirbrakePlugin.java  AirbrakePluginProvider.java  AirbrakePluginSimulationListener.java
(+34 files in other folders)
